// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Admin users have option to edit teams 1`] = `
<div>
  <div
    className="grid grid--justify-space-around"
  >
    <div
      className="grid__col-4"
    >
      <h1
        className="text-center"
      >
        Select a team
      </h1>
      <div
        className="selectable-box"
      >
        <h2
          className="selectable-box__heading"
        >
          Name
          <span
            className="selectable-box__status loader"
          />
        </h2>
        <ul
          className="selectable-box__list"
        >
          <li
            className="selectable-box__item selected"
            id={1}
            onClick={[Function]}
          >
            Team 1
          </li>
          <li
            className="selectable-box__item "
            id={2}
            onClick={[Function]}
          >
            Team 2
          </li>
          <li
            className="selectable-box__item "
            id={3}
            onClick={[Function]}
          >
            Team 2
          </li>
        </ul>
      </div>
    </div>
    <div
      className="grid__col-4"
    >
      <h1
        className="text-center"
      >
        Create a team
      </h1>
      <form
        className="form "
        onSubmit={[Function]}
      >
        <div
          className="form__input"
        >
          <label
            className="form__label"
            htmlFor="team-name"
          >
            Team name
          </label>
          
          <input
            className="input"
            disabled={false}
            id="team-name"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <button
          className="btn btn--positive"
          disabled={false}
        >
          Create
        </button>
      </form>
    </div>
  </div>
  <div
    className="drawer visible"
    onTransitionEnd={[Function]}
  >
    <div
      className="drawer__container"
    >
      <div
        className="drawer__heading"
      >
        <div
          className="grid grid--justify-space-around"
        >
          <div
            className="grid__col-8 margin-top--3 margin-bottom--2"
          >
            <h2>
              Team 1
            </h2>
          </div>
        </div>
      </div>
      <div
        className="drawer__banner drawer__banner--dark"
      >
        <div
          className="grid grid--justify-space-around"
        >
          <div
            className="grid__col-8 margin-top--1 margin-bottom--1"
          >
            <div>
              <h3>
                Read only
              </h3>
              <p>
                The list of teams if still being fetched so you can't edit or delete a team
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        className="drawer__banner"
      >
        <div
          className="grid grid--justify-space-around"
        >
          <div
            className="grid__col-8 margin-top--1 margin-bottom--1"
          >
            <div>
              <button
                className="btn btn--primary"
                disabled={true}
                onClick={[Function]}
              >
                Add / remove members
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="drawer__body"
      >
        <div
          className="grid grid--justify-space-around"
        >
          <div
            className="grid__col-8 margin-top--1"
          >
            <div>
              <h3
                className="margin-bottom--1"
              >
                Members:
              </h3>
              <ul
                className="list list--neutral"
              >
                <li
                  className="list__item"
                >
                  tester 1
                </li>
                <li
                  className="list__item"
                >
                  tester 2
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
      <div
        className="drawer__footer"
      >
        <div
          className="grid grid--justify-space-around"
        >
          <div
            className="grid__col-8 margin-top--1 margin-bottom--1"
          >
            <div>
              <button
                className="btn btn--warning btn--margin-right"
                disabled={true}
                onClick={[Function]}
              >
                Delete team
              </button>
              <button
                className="btn"
                onClick={[Function]}
              >
                Close
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  
  
</div>
`;

exports[`Non-admin users can't view option to edit teams 1`] = `
<div>
  <div
    className="grid grid--justify-space-around"
  >
    <div
      className="grid__col-4"
    >
      <h1
        className="text-center"
      >
        Select a team
      </h1>
      <div
        className="selectable-box"
      >
        <h2
          className="selectable-box__heading"
        >
          Name
          <span
            className="selectable-box__status loader"
          />
        </h2>
        <ul
          className="selectable-box__list"
        >
          <li
            className="selectable-box__item selected"
            id={1}
            onClick={[Function]}
          >
            Team 1
          </li>
          <li
            className="selectable-box__item "
            id={2}
            onClick={[Function]}
          >
            Team 2
          </li>
          <li
            className="selectable-box__item "
            id={3}
            onClick={[Function]}
          >
            Team 2
          </li>
        </ul>
      </div>
    </div>
    <div
      className="grid__col-4"
    >
      <h1
        className="text-center"
      >
        Create a team
      </h1>
      <form
        className="form "
        onSubmit={[Function]}
      >
        <div
          className="form__input"
        >
          <label
            className="form__label"
            htmlFor="team-name"
          >
            Team name
          </label>
          
          <input
            className="input"
            disabled={false}
            id="team-name"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <button
          className="btn btn--positive"
          disabled={false}
        >
          Create
        </button>
      </form>
    </div>
  </div>
  <div
    className="drawer visible"
    onTransitionEnd={[Function]}
  >
    <div
      className="drawer__container"
    >
      <div
        className="drawer__heading"
      >
        <div
          className="grid grid--justify-space-around"
        >
          <div
            className="grid__col-8 margin-top--3 margin-bottom--2"
          >
            <h2>
              Team 1
            </h2>
          </div>
        </div>
      </div>
      <div
        className="drawer__banner drawer__banner--dark"
      >
        <div
          className="grid grid--justify-space-around"
        >
          <div
            className="grid__col-8 margin-top--1 margin-bottom--1"
          >
            <div>
              <h3>
                Read only
              </h3>
              <p>
                The list of teams if still being fetched so you can't edit or delete a team
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        className="drawer__body"
      >
        <div
          className="grid grid--justify-space-around"
        >
          <div
            className="grid__col-8 margin-top--1"
          >
            <div>
              <h3
                className="margin-bottom--1"
              >
                Members:
              </h3>
              <ul
                className="list list--neutral"
              >
                <li
                  className="list__item"
                >
                  tester 1
                </li>
                <li
                  className="list__item"
                >
                  tester 2
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
      <div
        className="drawer__footer"
      >
        <div
          className="grid grid--justify-space-around"
        >
          <div
            className="grid__col-8 margin-top--1 margin-bottom--1"
          >
            <div>
              <button
                className="btn"
                onClick={[Function]}
              >
                Close
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  
  
</div>
`;
